packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/Stage_Dwell__c.object-meta.xml
<CustomObject>
    <label>Stage Dwell</label>
    <pluralLabel>Stage Dwells</pluralLabel>
    <nameField>
        <label>Dwell Number</label>
        <displayFormat>SD-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Append-only per-state-exit fact record for SLA tracking and predictor training. One row per state entry; Exited_At is set on transition out.</description>
</CustomObject>