packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Actor_Type__c.field-meta.xml
<CustomField>
    <fullName>Actor_Type__c</fullName>
    <label>Actor Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>