packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <label>Duration Seconds</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>