packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Entered_At__c</fullName>
    <label>Entered At</label>
    <type>DateTime</type>
</CustomField>