packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Next_State_Key__c.field-meta.xml
<CustomField>
    <fullName>Next_State_Key__c</fullName>
    <label>Next State Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>