packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Signal__c.field-meta.xml
<CustomField>
    <fullName>Signal__c</fullName>
    <label>Signal</label>
    <type>Text</type>
    <length>80</length>
</CustomField>