packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/State_Key__c.field-meta.xml
<CustomField>
    <fullName>State_Key__c</fullName>
    <label>State Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>