packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/State_Label__c.field-meta.xml
<CustomField>
    <fullName>State_Label__c</fullName>
    <label>State Label</label>
    <type>Text</type>
    <length>240</length>
</CustomField>