packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/State_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Type__c</fullName>
    <label>State Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>