packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Subject_Kind__c.field-meta.xml
<CustomField>
    <fullName>Subject_Kind__c</fullName>
    <label>Subject Kind</label>
    <type>Text</type>
    <length>40</length>
</CustomField>