packages/pulse-core/force-app/main/default/objects/Stage_Dwell__c/fields/Workflow_Instance__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Instance__c</fullName>
    <label>Workflow Instance</label>
    <type>MasterDetail</type>
    <referenceTo>Workflow_Instance__c</referenceTo>
    <relationshipLabel>Stage Dwells</relationshipLabel>
    <relationshipName>Stage_Dwells</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>